--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -19,25 +19,29 @@
         <a th:href="@{/board/update/{id}(id=${board.id})}"><button class="btn btn-default">수정</button></a>
         <button id="deleteBoard" class="btn btn-default">삭제</button>
         <a href="/"><button class="btn btn-default">뒤로</button></a>
+
+        <ul id="replies" class="list-group">
+            <li class="list-group-item" th:each="reply : ${replies}">
+                <input hidden class="replyId" th:value="${reply.id}">
+                <p>작성자 : <span th:text="${reply.writer}"></span></p>
+                <p class="replyContent" th:text="${reply.content}"></p>
+                <p><span th:text="${reply.createdDate}"></span></p>
+                <button class="updateReply btn btn-default">수정</button>
+                <button class="deleteReply btn btn-default">삭제</button>
+            </li>
+        </ul>
+
+        <form>
+            <div class="form-group">
+                <label for="createReplyWriter">작성자</label>
+                <input id="createReplyWriter" class="form-control">
+            </div>
+            <div class="form-group">
+                <textarea id="createReplyContent" class="form-control"></textarea>
+            </div>
+        </form>
+        <button id="createReply" class="btn btn-default">댓글 등록</button>
     </div>
-
-    <ul id="replies">
-        <li th:each="reply : ${replies}">
-            <input hidden class="replyId" th:value="${reply.id}">
-            <p>작성자 : <span th:text="${reply.writer}"></span></p>
-            <p th:text="${reply.content}"></p>
-            <p><span th:text="${reply.createdDate}"></span></p>
-            <button class="updateReply">수정</button>
-            <button class="deleteReply">삭제</button>
-        </li>
-    </ul>
-
-    <form>
-        <label>작성자</label>
-        <input id="createReplyWriter"><br>
-        <textarea id="createReplyContent"></textarea>
-    </form>
-    <button id="createReply">댓글 등록</button>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
