로그인 추가, 작성자 계정 이름으로 고정시킴

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -13,6 +13,8 @@
 <body>
     <div class="container-fluid">
         <a href="/board/new"><button class="btn btn-default">글 추가</button></a>
+        <label th:text="${username}"></label><span>님 환영합니다.</span>
+        <button id="logout">로그아웃</button>
         <table class="table table-hover">
             <tr>
                 <th>제목</th>
@@ -35,6 +37,7 @@
     <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script src="/js/board.js"></script>
+    <script src="/js/login.js"></script>
 </body>
 
 </html>
