--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -24,7 +24,7 @@
                     </div>
             <div class="form-group">
                 <label for="writer">작성자</label>
-                <input id="writer" class="form-control" th:value="${board.writer}">
+                <input id="writer" class="form-control" th:value="${board.writer}" readonly>
             </div>
         </form>
         <button id="updateBoard" class="btn btn-default">글 수정</button>
