--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -15,15 +15,15 @@
         <input hidden id="boardId" th:value="${board.id}">
         <h2 th:text="${board.title}"></h2>
         <p th:text="${board.content}"></p>
-        <p><span th:text="${board.writer}"></span> <span th:text="${board.createdDate}"></span> 조회수 : <span th:text="${board.cnt}"></span></p>
-        <a th:href="@{/board/update/{id}(id=${board.id})}"><button class="btn btn-default">수정</button></a>
+        <p><span id="boardWriter" th:text="${board.writer}"></span> <span th:text="${board.createdDate}"></span> 조회수 : <span th:text="${board.cnt}"></span></p>
+        <button id="updateBoardButton" class="btn btn-default">수정</button>
         <button id="deleteBoard" class="btn btn-default">삭제</button>
         <a href="/"><button class="btn btn-default">뒤로</button></a>
 
         <ul id="replies" class="list-group">
             <li class="list-group-item" th:each="reply : ${replies}">
                 <input hidden class="replyId" th:value="${reply.id}">
-                <p>작성자 : <span th:text="${reply.writer}"></span></p>
+                <p>작성자 : <span class="replyWriter" th:text="${reply.writer}"></span></p>
                 <p class="replyContent" th:text="${reply.content}"></p>
                 <p><span th:text="${reply.createdDate}"></span></p>
                 <button class="updateReply btn btn-default">수정</button>
@@ -34,7 +34,7 @@
         <form>
             <div class="form-group">
                 <label for="createReplyWriter">작성자</label>
-                <input id="createReplyWriter" class="form-control">
+                <input id="createReplyWriter" class="form-control" th:value="${username}" readonly>
             </div>
             <div class="form-group">
                 <textarea id="createReplyContent" class="form-control"></textarea>
