--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -23,7 +23,7 @@
             </div>
             <div class="form-group">
                 <label for="writer">작성자</label>
-                <input id="writer" class="form-control">
+                <input id="writer" class="form-control" th:value="${username}" readonly>
             </div>
         </form>
         <button id="createBoard" class="btn btn-default">글 추가</button>
