--- a/src/main/resources/templates/board/main.html
+++ b/src/main/resources/templates/board/main.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
         <a href="/board/new"><button class="btn btn-default">글 추가</button></a>
         <label th:text="${username}"></label><span>님 환영합니다.</span>
-        <button id="logout">로그아웃</button>
+        <button id="logout" class="btn btn-default">로그아웃</button>
         <table class="table table-hover">
             <tr>
                 <th>제목</th>
