--- a/src/main/resources/templates/login/register.html
+++ b/src/main/resources/templates/login/register.html
@@ -13,14 +13,20 @@
 </head>
 
 <body>
-    <div>
-        <label>계정</label><br>
-        <input id="account"><br>
-        <label>비밀번호</label><br>
-        <input type="password" id="password"><br>
+    <div class="container-fluid">
+        <form>
+            <div class="form-group">
+                <label for="account">계정</label>
+                <input id="account" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="password">비밀번호</label>
+                <input type="password" id="password" class="form-control">
+            </div>
+        </form>
+        <button id="register" class="btn btn-default">등록</button>
+        <a href="/login"><button class="btn btn-default">취소</button></a>
     </div>
-    <button id="register">등록</button>
-    <a href="/login"><button>취소</button></a>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
