--- a/src/main/resources/templates/board/main.html
+++ b/src/main/resources/templates/board/main.html
@@ -12,9 +12,20 @@
 
 <body>
     <div class="container-fluid">
-        <a href="/board/new"><button class="btn btn-default">글 추가</button></a>
-        <label th:text="${username}"></label><span>님 환영합니다.</span>
-        <button id="logout" class="btn btn-default">로그아웃</button>
+        <div class="form-inline">
+            <a href="/board/new"><button class="btn btn-default">글 추가</button></a>
+            <label th:text="${username}"></label><span>님 환영합니다.</span>
+            <button id="logout" class="btn btn-default">로그아웃</button>
+        </div>
+
+        <br>
+
+        <div class="form-inline">
+            <input id="searchKeyword" placeholder="키워드를 입력하세요" class="form-control">
+            <button id="search" class="btn btn-default">검색</button>
+            <a href="/"><button class="btn btn-default">전체 목록</button></a>
+        </div>
+
         <table class="table table-hover">
             <tr>
                 <th>제목</th>
