--- a/src/main/resources/templates/user/userDetail.html
+++ b/src/main/resources/templates/user/userDetail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <!-- 합쳐지고 최소화된 최신 CSS -->
@@ -7,27 +7,15 @@
     <!-- 부가적인 테마 -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 
-    <title>
-        사이드 프로젝트1        
-    </title>
+    <title>사이드 프로젝트1</title>
 </head>
 
 <body>
     <div class="container-fluid">
-        <form>
-            <div class="form-group">
-                <label for="account">계정</label>
-                <input id="account" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="password">비밀번호</label>
-                <input type="password" id="password" class="form-control"><br>
-            </div>
-        </form>
-        <button id="login" class="btn btn-default">로그인</button>
-        <a href="/login/new"><button class="btn btn-default">회원가입</button></a>
+        <ul>
+            <li><a th:href="@{/user/update/{username}(username=${username})}">비밀번호 변경</a></li>
+        </ul>
     </div>
-
 
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
