--- a/src/main/resources/templates/user/updatePassword.html
+++ b/src/main/resources/templates/user/updatePassword.html
@@ -7,21 +7,32 @@
     <!-- 부가적인 테마 -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+
     <title>사이드 프로젝트1</title>
 </head>
 
 <body>
     <div class="container-fluid">
-        <input hidden th:value="${username}" id="account" class="form-control">
-        <input class="form-control" id="password" type="password">
-        <input class="form-control" id="passwordConfirm" type="password">
+        <input th:value="${username}" id="account" hidden>
+
+        <div class="form-group">
+            <label for="password">비밀번호</label>
+            <input class="form-control" id="password" type="password">
+        </div>
+
+        <div class="form-group">
+            <label for="passwordConfirm">비밀번호 확인</label>
+            <input class="form-control" id="passwordConfirm" type="password">
+        </div>
+
         <button class="btn btn-default" id="updatePassword">비밀번호 변경</button>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="/js/user.js"></script>
     <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <script src="/js/user.js"></script>
 </body>
 
 </html>
